--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -6,7 +6,7 @@ fos_rest:
             - { path: '^/api', priorities: ['json'], fallback_format: 'json' }
     exception:
         enabled: true
-    # view:
-    #     view_response_listener: 'force'
-    #     formats:
-    #         json: true
+    view:
+        view_response_listener: 'force'
+        formats:
+            json: true
